--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "coffee-script": "=1.2.0",
     "jshint": "~2.4.2",
     "less": "=1.4.2",
+    "mocha": "=1.17.1",
     "iconv": "=2.0.3",
     "stylus": "=0.23.0",
     "yui-compressor": "=0.1.3",
+    "unexpected": "=2.1.4",
     "vows": "=0.7.0"
   },
   "engines": {
@@ -55,7 +57,7 @@
   "main": "lib",
   "scripts": {
     "lint": "jshint .",
-    "test": "npm run lint && vows",
+    "test": "npm run lint && vows && mocha",
     "travis": "npm run lint && vows --spec",
     "prepublish": "npm test"
   }
