--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
     "cssom-papandreou": "=0.2.4-patch3",
     "glob": "=3.1.9",
     "httperrors": "=0.2.0",
+    "imageinfo": "=1.0.4",
     "jsdom": "=0.10.0",
+    "mkdirp": "=0.3.5",
     "optimist": "=0.3.1",
     "passerror": "=1.0.0",
     "request": "=2.9.153",
     "seq": "=0.3.5",
     "source-map": "=0.1.19",
-    "uglifyast": "=0.3.2",
     "uglify-js-papandreou": "=2.4.1-patch1",
+    "uglifyast": "=0.3.2",
     "underscore": "=1.3.1",
     "urltools": "=0.1.0",
-    "xmldom": "=0.1.16",
-    "mkdirp": "=0.3.5",
-    "imageinfo": "=1.0.4"
+    "xmldom": "=0.1.16"
   },
   "devDependencies": {
     "onedox": "~0.0.1",
@@ -45,7 +45,7 @@
     "iconv": "=2.0.3",
     "stylus": "=0.23.0",
     "yui-compressor": "=0.1.3",
-    "unexpected": "=2.1.4",
+    "unexpected": "=3.0.1",
     "vows": "=0.7.0"
   },
   "engines": {
